# asgi-gzip

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml  track.yml
asgi_gzip/: __init__.py  headers.py
tests/: test_asgi_gzip.py
